--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1></h1>
     <img Width="1600"src="dolphin.avif" alt="">
+    <img src="taco shells.jpg" alt="">
     
 </body>
 </html>
