--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1></h1>
-    <img Width="1600"src="dolphin.avif" alt="">
-    <img src="taco shells.jpg" alt="">
+    <img Width="200"src="dolphin.avif" alt="">
+    <img widhth="200"src="taco shells.jpg" alt="">
     
 </body>
 </html>
