--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Girisam</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Girisam</h1>
     <img Width="200"src="dolphin.avif" alt="">
    
     
