--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Girisam</h1>
     <img Width="1250"src="dolphin.avif" alt="">
-   
+   <img src="taco shells.jpg" alt="">
     
 </body>
 </html>
