--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Girisam</h1>
-    <img Width="1250"src="dolphin.avif" alt="">
-   <img src="taco shells.jpg" alt="">
+    <img Width="500"src="dolphin.avif" alt="">
+   <img width="500"src=taco shells" alt="">
+   
+
     
 </body>
 </html>
