Taco shells added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Girisam</h1>
     <img Width="500"src="dolphin.avif" alt="">
-   <img width="500"src=taco shells" alt="">
-   
+   <img width="500"src="taco sheels.jpg" alt="">
+
 
     
 </body>
