--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Girisam</h1>
     <img Width="500"src="dolphin.avif" alt="">
-   <img width="500"src="taco sheels.jpg" alt="">
+   <img width="500"src="taco shells.jpg" alt="">
 
 
     
