Banu image added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
     <h1>Girisam</h1>
-    <img Width="500"src="INNOCENT ORANGE JUICE WITH BITS 1.35LTR.jpg" alt="">
-    <img Width="500"src="LITTLE MOONS MOCHI ICE CREAM PINEAPPLE & MANDARIN 6'S 192G.jpg" alt="">
-    <img Width="500"src="LITTLE MOONS MOCHI ICE CREAM SUMMER RASPBERRY 6'S 192G.jpg" alt="">
-    <img Width="500"src="LITTLE MOONS MOCHI ICE CREAM SWEET & SALTY POPCORN 6'S 192G.jbg" alt="">
-   <img width="500"src="taco shells.jpg" alt="">
+    <img Width="500"src="Banu.jpeg.jpeg" alt="">
+   
 
 
     
