--- a/index.html
+++ b/index.html
@@ -8,6 +8,84 @@
 <body>
     <h1>Girisam</h1>
     <img Width="500"src="Banu.jpeg.jpeg" alt="">
+    oncontextmenu="return false" class="txt"style="line-height:2;"> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; கவந்தர் அவன் பெயர். எளிமையாக கிடைக்கும் எதுவும் அவனுக்கு கிடைப்பதில்லை. அவனுக்குள்ளும் சராசரி மனிதனின் ஆசைக்கு குறைவில்லை.
+வாழ்க்கையின் போராட்டங்கள் என்னவென்றே தெரியாமல் போராடி கொண்டிருப்பான். பரந்து விரிந்த புழுதிபரக்கும் வண்டல் மணற்பறப்பே அவன் மாளிகை, மண்துகள்களே அவன் ஆடைகளாகும். 
+எப்போதாவது கிடைக்கும் சொந்தகாரங்க வீட்டு சாப்பாடே உலகிற் சிறந்த உணவு அவனுக்கு. கவந்தர் அறிமுகம் போதும். மேலும் சொல்லி பரிதாபம் ஏற்பட வேண்டாம் கவந்தருக்கும் அது பிடிக்காது.
+காலை எழுந்து குளத்து தண்ணியில குளித்து, சிவ பூஜை செய்ய தொடங்கினான்.   அந்த நேரத்தில் அவன் வழக்கமாக மெழுகுவர்த்தி ஏத்தும் தேவாலயத்தின் கதவு பெயிண்ட் அடிக்க நேற்று மாலை, 
+தொழுகை முடித்து வீடு திரும்பும் போது பாய் சொன்னதை மறந்திருந்தான். இப்போது கவந்தர் மதம் சொல்லனுமா. உங்களுக்கே தெரிந்திருக்கும்ல.
+ இந்த உலகத்தில் ஒரு உயிராக பிறந்துவிட்டான் அதனால் வாழ பழக ஆரம்பித்திருந்தான். பள்ளி என்றால் என்ன என்பதை அறிவதற்குள் படிக்கும் வயது முடிந்திருந்தது. 
+ ஒருமுறை கொருக்காபுள்ளி பழம் பறிக்க செல்லும்போது காலில் குத்திய முள்ளால் கால் முழுவதும் ரத்தமாகிருந்தது. காலை தொடைத்துகொண்டு நொண்டியே வீட்டிற்க்கு வந்தான். 
+ இரண்டு நாட்கள் நடக்க மிக கஷ்டபட்டான். கவந்தர் மனம் கேட்டது இவ்வளவு வலி எப்படி வந்தது? அதுக்கு கவந்தர் கேட்டான் கொருக்காபுள்ளி எப்படி இருந்தது? மனம் அமைதியானது. 
+ இவ்வளவு கதையில் வேறு பாத்திரங்களை காணுமே. ஒவ்வொருவரும் வருவார்கள். கதையின் நாயகி அறிமுகம் இதோ!!! மன்னிக்கவும் கதையின் முதல் நாயகி இதோ!!! 
+அழகிய இரு கண்களின் பார்வையினில் ஓராயிரம் ஆண் ஆண்மாக்களை அடக்கும் தன்மைகொண்ட அழகிய பெண். சற்றே வளர்ந்திருந்தால் தரையினை தள்ளிவிடும் கூந்தல். 
+பார்போர் அணைவரும் ஒரு நிமிடம் நின்று நோட்டமிடும் வடிவம். அவள் பெயர் தீவாதி. அவளின் அன்றாட வழக்கம் தேவாலயம் சென்று ஜபம் செய்வது.  
+வழக்கபோல் ஒருநாள் ஜபம் முடித்து திரும்பும்போது மிக பெரிய வெள்ளம், உலகில் அனைத்தும் அழிந்துபோயின. தீவாதியும் கவந்தர் மட்டுமே உயிர் பிழைத்தனர்.
+ வெள்ளம் வடிந்தபின் கண்டபோது அனைத்தும் கடல்கொண்டு சென்றது. இருவரும் வேறுவேறுபக்கம் இருந்தனர். இருவர் மட்டும் உயிர்பிழைத்தது இருவரும் அறிந்திருக்கவில்லை. <br>
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; இந்த நிலையில் நாம் என்ன செய்வோம்?? தீவாதி இந்த பக்கம் உணவில்லாமலும் கவந்தர் அந்த பக்கம் உணவில்லாமலும் வாடினர்.  தீவாதி செய்வதறியாது நடந்து சென்றுகொண்டிருந்தாள். 
+ கவந்தர் ஒரு கூரை வீடு கட்ட முயற்ச்சி செய்துகொண்டிருந்தான். அவனுக்கு இவ்வளவு கஷ்டத்திலயும் சிறு வருத்தமும் இல்லாமல் இருந்தான். காரணம் எப்போதும் கவலையில் இருப்பவனுக்கு புது கவலை தெரியுமா. 
+ கூரை வீட்டின் கால்களுக்கு பக்கத்தில் இருந்த மூங்கில் தோப்பில் இருந்து கழிகள் வெட்டி எடுத்து வந்தான். ஒவ்வொரு கால்களுக்கும் ஒரு மொழம் அளவு குழி பறித்தான். 
+ அவற்றினுள் கால்களை பதித்து கால்களை நட்டான். பிறகு இருபக்கமும் கழிகளை கட்டி கூரைபோல் வேய்ந்து முடித்தான். 
+ பிறகு கூரை கீற்றுக்காக தென்னைவோலைகளை கொண்டுவந்து கீற்று பின்னினான். அதன்பிறகு அதனை கூரை கழிகளுக்கு மேல் கட்டி ஒரு கூரை வீடு கட்டினான்.
+ வீட்டின் சுவருக்காக அருகில் உள்ள குளக்கரைக்கு சென்று மண் எடுத்து சுவர் எழுப்பினான். தற்போது கதவு மட்டும் மீதமிருந்தது. அதற்காக மூங்கில் கதவுகள் செய்ய துவங்கினான். 
+ அத்தனையும் விரைவில் செய்து முடித்து வாசலில் பொறுத்தினான். வீட்டிற்குள் ஒரு மண் அடுப்பு செய்தான்.  இவையனைத்தும் செய்து முடிப்பதற்குள் பசி எடுத்தது. <br><br>
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; பசியினை போக்க அருகில் நடக்க தொடங்கினான். சிறிது தூரத்தில் பப்பாளி மரம் விழுந்து கிடந்ததால் பப்பாளி பழம் முழுதும் பழுக்காமல் பாதி பழுத்திருந்தது. 
+ அது அவனுக்கு மிகவும் பிடித்திருந்தது. முழுவதும் உண்டுவிட்டு மீதம் வீட்டிற்கு எடுத்து வந்தான் இரவு உணவிற்காக. அவனுடைய முழு வாழ்வும் ஒரு குறிப்பிட்ட வட்டத்துக்குள்ளேயே இருந்தது. 
+ கதையின் நாயகி தீவாதி ஒரு மரத்தின் நிழலில் வாழ தொடங்கியிருந்தாள். அத்தனை துயரத்திலும் அவளின் அழகினால் குறைவில்லை.  அருகில் இருந்த குளக்கரையில் மீன் பிடித்து உணவு உண்ண பழகியிருந்தாள்.
+ குளத்தின் நீரின் அருகினில் இருந்த மரத்தின் அடியில் அமர்ந்திருந்த அவளின் மேல் வீசிய தென்றல் காற்று அவளை உறக்க நிலைக்கு தள்ள ஆரம்பித்திருந்தது. 
+ ஆம் காற்றின் திட்டமே நிறைவேறியிருந்தது, அவள் உறங்கிவிட்டாள். உறக்கம் கலைந்த விழிக்கும்போது அவளுக்காக மாலை நேர பறவைகளும், தவளைகளும் சத்தமிட தொடங்கியிருந்தது. 
+ இப்போதே அவளுக்கு ஒரு நினைவு வந்தது. அவள் மட்டும் தனியா இருப்பதால் என்ன செய்வது என யோசித்தாள். சற்று நடக்க வேண்டுமென அவள் மனது கூறியது போல் நடக்க தொடங்கினாள். 
+ ஒவ்வொரு நடைக்கும் உள்ள சத்தம் அந்த மண்ணுக்கும் அறியாதவளாய் நடக்க தொடங்கினாள். அவள் காணும் காட்சிகள் யாவும் நித்தம் புதிதாக தென்பட்டன அவளுக்கு. 
+ அதற்கு முன் அவள் கண்டது கூட இல்லை. ஆம் மெல்ல நகரும் நத்தை கூட்டங்கள் அதன்பின் தொடரும் வண்டுகள் சற்று தூரத்தில் வந்து கொண்டிருந்த ஆமை கூட்டங்களும் 
+ அவளுக்கு மிகவும் புதுமை உணர்வை கொடுத்திருந்தன. அதற்கு முன் அவள் கண்டதில்லை இதுபோல் இயற்கையை.  அவள் வெள்ளத்திற்கு முன் பழகியிருந்த தேவாலய பிரார்த்தனைகள், மக்கள் கூட்டங்கள்,
+ தேவாலய பேராயர்களும் அவள் ஞாபகத்திலில்லை. அவள் மனம் முழுதும் இயற்கையும் அவளின் எண்ணங்கள் மட்டுமே நிரம்பியிருந்தது. எதனை பற்றிய சிந்தனைகளும்,
+ அடுத்த நாள் பற்றிய ஆர்வமும் அவளிடம் இல்லை. இன்னொரு நாள் வாழ வேண்டிய நிபந்தனைகளும் அவளிடம் இல்லாமல் அன்றைய பொழுதுகள் மட்டுமே நினைவிலிருந்தன. 
+ உறக்கத்தில் நம் நினைவில் ஏவ்வாறு இருக்குறதோ அவ்வாறே நிஜத்திலும் அவள் நினைவு இருந்தது. வெற்றிட நினைவை நம்மால் நினைத்து பார்க்க முடியுமா? அவளுக்கு அப்படியே இருந்தது. 
+ என்னவொரு அதிர்ஷ்டக்காரி அவள். ஒரு சிறு சிந்தனையும் இல்லை அவளிடம். வாழ்க்கையின் உண்மையான அர்த்தத்தையும் அவள் உணர தொடங்கியிருந்தாள். அவளின் அழகை ரசிக்கவும் ஆளில்லை, 
+ அவள் ரசிக்கும் ஒருவரும் அங்கில்லை. காற்றின் வேகத்தில் அசையும் நாணலின் அழகே அவளுக்கு அற்புதமாக தென்பட்டது.  <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; நாணலை கண்டு வியந்து கொண்டே அடுத்த அடிநோக்கி சென்றாள்.
+ அருகினில் உள்ள ஆவாரம் பூவின் மஞ்சள் நிறம் அவளுக்கு ஆனந்தத்தை கொடுத்தது. மீண்டும் நடந்தாள், தூரத்தில் உள்ள ஆலமர விழுதுகளையும், 
+ வழியினில் உள்ள சிறுசிறு புற்களின் மீது கால்கள் படாதவாறு செல்ல முயன்று கொண்டிருந்தாள். ஒவ்வொரு புற்களும் என்ன பேசுமென யோசித்து கொண்டே சென்றாள். 
+ புற்தரையை கடந்த அவள் உடலின் அசதியை போக்க அருகில் இருந்த அருவியில் விளையாட யோசித்தவள் ஆர்ப்பரிக்கும் அருவியின் நீரித்துளிகள் அவளின் மீது தெரிந்தன. 
+ ஒவ்வொரு துளியும் அவளின் மன நிம்மதியினை அதிகரித்து கொண்டே இருந்தது. முற்றிலும் நனைந்த தீவாதி, தற்போது தணல் மிகுந்த இடத்தை தேடினாள். 
+ .அருகினில் உள்ள வண்டல் மண் தரையில் சென்று அமர்ந்து அவளின் ஆடைகளை உலர்த்த விரும்பி சென்றாள். சற்றே சில ஆடைகளை அவிழ்த்து உலர்த்த தொடங்கினாள்.
+ உலர்த்தும் நேரத்தில் தூரத்தில் ஒரு கூரை வீட்டை கண்டாள். மனதில் ஒரு வித எண்ணங்கள் உருவாக தொடங்கியிருந்தது. அது யார் வீடாக இருக்கும் யாரேனும் தன்னை தவிர வேறு ஒருவர் உயிரோட இருப்பாரோ, 
+ ஆயிரம் கேள்விகள் உதயமானது. உலர பட்ட ஆடைகள் மீண்டும் அவள் உடலுக்கு மேல் ஏறின.  சிறு பதற்றத்துடன் அந்த வீட்டை நோக்கி சென்றாள். அச்சமயம் கவந்தர் அங்கில்லை. 
+ வீட்டை நெருங்கி அனைத்தையும் கண்டாள், வீடு, கூரை, அடுப்பு, கதவு கண்ட அவள் இவையனைத்தும் தனக்கு இருந்தால் எப்படி இருக்குமென எண்ணினாள். அவளுக்கு இருந்தது இரு வாய்ப்புகள் மட்டுமே,
+ ஒன்று கவந்தர் அங்கு இருக்க கூடாது, இரண்டாவது கவந்தருடன் வாழ வேண்டும். கவந்தர் பற்றி எதுவும் அறிந்திருக்கவில்லை தீவாதி. 
+ கவந்தரின் வழக்கமான அணைத்து வழக்கங்களும் முற்றிலும் மாறி போயிருந்தன. அவன் போகும் சிவன் கோவிலும், மசூதியும் எங்குமே தென்படவில்லை.
+ அவனுக்கு தெரிந்தவை தற்போது வண்டல்மண், பூமி, குளம், அருவி மற்றும் இயற்க்கை மட்டுமல்லாது அவனின் கூரை வீடு. சில விறகுகளை எடுத்து வந்த அவன் வீட்டினை நெருங்கினான். 
+ அவளை தூரத்தில் கண்ட தீவாதி கூரை வீட்டின் பின்புறம் ஒளிந்து கொண்டாள். தீவாதி மறைந்து கவந்தர் செய்வதை கண்டு கொண்டிருந்தாள். <br>
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; எதை பற்றியும் யோசிக்காமல் தான் கொண்டு வந்திருந்த கிழங்குகளை சமைக்க தொடங்கினான். வீட்டிற்குள் செல்லும்போது அவன் உணர்ந்த மணம் சற்று வித்தியாசமானதாக இருந்தது. 
+ அது தீவாதி வண்டல் மண் தரையில் உலர்த்தி கொண்டிருந்த தன் உடைகள் கீழ் இருந்த மல்லிகை பூவின் மணம் அவளின் வியர்வை துளியுடன் சேர்ந்த மணம் தான் கவந்தர் உணர்ந்திருந்தது.
+ விசித்திர மணத்தினை உணர்ந்தும் அவன் அதை பெரிதாக யோசிக்கவில்லை காரணம் அவன் நினைத்திருந்தான் அவனை தவிர யாரும் இவ்வுலகில் மீதமில்லை என. 
+ கூரை வீட்டின் பின்புறத்திலிருந்து தீவாதி சற்று பதற்றத்துடனே பார்த்து கொண்டிருந்தாள். இவ்விருவருக்கும் இந்நாளைய வாழ்வியல் முறைகள் அனைத்தும் தெரிந்திருந்தும் அனைத்தையும் மறந்திருந்தனர். 
+ தற்சார்பு வாழ்க்கை வாழ தொடங்கியிருந்தனர். விறகு எடுக்க வெளியில் வந்த கவந்தர் வீட்டின் பின்புறம் இருந்த தீவாதியை கண்டான். தீவாதியும் கவந்தரை கண்டாள். சற்றே பொறுங்கள்.
+ கண்டதும் காதலில்லை மற்ற கதைகள் போல... <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; தீவாதி மெல்ல ஒரு மல்லிகை பூவின் அசைவுகளை போல பேச தொடங்கினாள். நான் உன்னோடு வாசிக்கலாமாஎன்று.  
+ அதற்கு கவந்தர் இவ்வீடு தன்னை மழையிலிருந்தும் குளிரிலிருந்தும் பாதுகாக்க காட்டினேன், அதுபோல நீயும் ஒரு வீடு கட்டிக்கொள்ள என்றான். கவந்தரை போல தீவாதியும் வீட்டினை கட்ட ஆரம்பித்தாள். 
+ விரைவாக ஒரு வீட்டையும் கட்டிக்கொண்டாள். பிறகு தீவாதி உணவு தேடி காட்டு பக்கம் சென்றாள், கவந்தர் வீட்டிற்குள் சென்று சமைத்து முடித்து சாப்பிட்டான்.
+ தீவாதியும் காட்டிலிருந்து பழம் கொண்டு வந்து சாப்பிட்டு முடித்தாள். தற்போது இருவருக்கும் ஒரு நிலையான வாழ்க்கை வடிவம் கிடைத்தது. வீடு, கூரை, அடுப்பு மற்றும் இவர்கள்.
+ யாருமே இல்லாத உலகினில் ஒரு ஆணும் ஒரு பெண்ணும் வாழும் வாழ்க்கையினை யோசிக்கும்போதே பல்வேறு கனவுகள் நமக்குள்ளும் எவ்வாறு இருக்குமென. 
+ கவந்தரும் தீவாதியும் வேறு வேறு வாழ்க்கை நிலையை முன்பு கொண்டிருந்தனர். தற்போது இருவருக்கும் ஒரே மாரியான இயற்கையோடு சார்ந்த வாழ்வு. 
+ அருகில் உள்ள குளத்தில் மீன் பிடிக்க தீவாதி நன்றாக பழகியிருந்தாள். தற்போதைய வழிபோல மீன் தேடி பிடிக்க வேண்டிய அவசியமில்லை அவளுக்கு. 
+ மீன்பிடிக்க அவள் உடுத்தியிருந்த சேலையின் சிறு அளவே போதுமாயிருந்தது. அந்த அளவுக்கு மீன்கள் வளமிருந்தது. தன் சேலையின் ஒரு பகுதியை எடுத்து மீன்பிடிக்க தயாரானாள்.
+ முழுதும் தண்ணீரால் நிரம்பியிருந்த குளத்தில் பாசி படர்ந்து பச்சை நிறத்தில் காட்சியளித்தது. குளத்தின் ஒரு சில பகுதிகளில் ஆகாய தாமரை வளர்ந்திருந்தது. 
+ தன் சேலையிலிருந்து ஒரு பகுதியை எடுத்து மீன் பிடித்தாள். இரு மீன்கள் கிடைத்தது குரவை மீன் மற்றும் கெளுத்தி மீன். பிடித்து கொண்டு தன் வீடு நோக்கி நடந்தாள். 
+ செல்லும் வழியில் முன்பு அவள் உறங்கிய மரத்தை கண்டாள். பிடித்திருந்த மீன் அங்கேயே வைத்து சற்று ஓய்வெடுக்க நினைத்தாள். பின்பு உறங்க துவங்கினாள். 
+ உறங்கிக்கொண்டிருக்கும் போது கனவு வந்தது அவளுக்கு. <br>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; அவள் குடும்பத்துடன் வசித்து கொண்டிருக்கும்போது அவனோடு படித்த ரித்தன் நினைவுகள். ரித்தன் ஒரு அழகான ஆண்மகன், நல்ல உடல்வாகு கொண்டவன். 
+ தீவாதியும் ரித்தனும் உறவினர்கள் மற்றும் ஒரே பள்ளியில் படித்தவர்கள். ரித்தன் மற்றும் தீவாதியின் வயது பதினாறு. இருவரும் அவர்களுக்கு அறியாமல் ஒரு வித உணர்வுகள் கொண்டிருந்தார்கள்.
+ ஆரம்ப பள்ளியிலிருந்து இடைநிலை பள்ளி வரை அவர்கள் ஒன்றாக படித்து கொண்டிருந்தார்கள். இருவரும் ஒன்றாக பள்ளி செல்வதும், ஒன்றாக விளையாட செல்வதும் வழக்கம். 
+ சிறு வயதில் இருவரும் பல சமயங்களில் தனியா இருந்துர்ப்பது வழக்கம். ஆனால் பதினெண் வயது சிறு வயது தனிமை அல்ல என்பது எவரும் அவர்களுக்கு அறிவுறுத்தவில்லை. 
+ அதன் விளைவாக இருவரின் தனிமை அடுத்த கட்ட நகர்வை நித்தமும் கொண்டிருந்தது. இருவரும் முத்தங்களை பரிமாறினர். கைகள் இணைந்தன, கால்களும் உடல்களும் நித்தமும் இணைந்து கொண்டிருந்தது. 
+ அது அவர்களுக்கு பிடித்திருந்தது பதினெண் வயதல்லவா. இவ்வாரே பல மாதங்கள் சென்றன. தீவாதிக்கு மிகவும் பிடித்த பழம் பப்பாளியும், அன்னாசி பழமும்.
+ தீவாதியின் சித்தப்பா கேரளாவில் இருந்து பழங்கள் நிறைய கொண்டு வந்திருந்தார். தீவாதி அணைத்து பப்பாளி அன்னாசி பழத்தினை சாப்பிட்டாள்.  அது அவளுக்கு நிம்மதியை கொடுத்தது. 
+ அன்று மாலை அவளுக்கு மிகுந்த வயிற்று வலி ஏற்பட்டது. அதற்கு முன்பு அவ்வாறு அவளுக்கு வலித்திருக்கவில்லை. அவளுக்கு மாதவிடாய் ஏற்பட்டது, ரத்தப்போக்கும் அதிகமானது.  
+ அடுத்த சில நாள்களில் அந்த வலி அகன்று போனது. மீண்டும் அவள் பள்ளிக்கு சென்றாள், ஆனால் ரித்தன் அங்கு இல்லை, ரித்தன் வேறு பள்ளிக்கு மாரி சென்றான். தீவாதி கனவு கலைந்து எழுந்தாள். 
+ தான் பிடித்திருந்த மீனை எடுத்துக்கொண்டு அவள் வீட்டிற்கு சென்றாள். அங்கு மீன் சுட்டு சாப்பிட விரும்பி செய்ய துவங்கினாள்.  சாப்பிட்டுவிட்டு உறங்க துவங்கினாள்.  
+ இரவு மணி 12 ஆனது, திடீரென ஒரு உருவம் தீவாதியின் வீட்டிற்குள் வந்தது. தீவாதி எழுந்து நிற்பதற்குள் அவளின் கன்னங்களில் அரை விழுந்தது. 
+ அவளின் முடிகளை இழுத்து சுவரில் மோதியது, தலையிலிருந்து வழிந்த ரத்தம் அவளின் முகம் வழியாக கழுத்தினை தாண்டியது. அவளின் வயிற்றில் மிக வேகமா ஒரு தாக்குதல் நிகழ்ந்தது.
+ அவள் சுருண்டு விழுந்தாள், ஆனால் தாக்குதல் தொடர்ந்தது. இரு கைகளையும் பிடித்து இழுத்து மூங்கில் கதவுகளில் முட்டியது ரத்தம் பீறிட்டது, அவளின் இரு கால்களையும் பிடித்து தூக்கி எறியப்பட்டது.
+ உடலின் சேலைகள் யாவும் எங்கு சென்றது என்பது அறியாமல் அவள் கீழே விழுந்து கிடந்தாள். கைகள், கால்கள், முகம், உதடு, முழங்கால்கள் மற்றும் முதுகுபகுதிகள் அனைத்தும் சிதைக்கப்பட்டது. <br>
+ 
+விரைவில் அடுத்த பாகம் !!! <style>.txt{user-select: none;} </p>
    
 </body>
 </html>
