Manitha unarvugal image added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Girisam</h1>
-    <img Width="500"src="Banu.jpeg.jpeg" alt="">
+    <img oncontextmenu="return false" draggable="false" alt="descripton of image"title="Powered by Girisam" src="Manitha Unarvugal.png"style="float:left;margin-right:100px;">
 <p oncontextmenu="return false" class="txt"style="line-height:2;"> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; கவந்தர் அவன் பெயர். எளிமையாக கிடைக்கும் எதுவும் அவனுக்கு கிடைப்பதில்லை. அவனுக்குள்ளும் சராசரி மனிதனின் ஆசைக்கு குறைவில்லை.
 வாழ்க்கையின் போராட்டங்கள் என்னவென்றே தெரியாமல் போராடி கொண்டிருப்பான். பரந்து விரிந்த புழுதிபரக்கும் வண்டல் மணற்பறப்பே அவன் மாளிகை, மண்துகள்களே அவன் ஆடைகளாகும். 
 எப்போதாவது கிடைக்கும் சொந்தகாரங்க வீட்டு சாப்பாடே உலகிற் சிறந்த உணவு அவனுக்கு. கவந்தர் அறிமுகம் போதும். மேலும் சொல்லி பரிதாபம் ஏற்பட வேண்டாம் கவந்தருக்கும் அது பிடிக்காது.
