Viraivil added spaces

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
  இரவு மணி 12 ஆனது, திடீரென ஒரு உருவம் தீவாதியின் வீட்டிற்குள் வந்தது. தீவாதி எழுந்து நிற்பதற்குள் அவளின் கன்னங்களில் அரை விழுந்தது. 
  அவளின் முடிகளை இழுத்து சுவரில் மோதியது, தலையிலிருந்து வழிந்த ரத்தம் அவளின் முகம் வழியாக கழுத்தினை தாண்டியது. அவளின் வயிற்றில் மிக வேகமா ஒரு தாக்குதல் நிகழ்ந்தது.
  அவள் சுருண்டு விழுந்தாள், ஆனால் தாக்குதல் தொடர்ந்தது. இரு கைகளையும் பிடித்து இழுத்து மூங்கில் கதவுகளில் முட்டியது ரத்தம் பீறிட்டது, அவளின் இரு கால்களையும் பிடித்து தூக்கி எறியப்பட்டது.
- உடலின் சேலைகள் யாவும் எங்கு சென்றது என்பது அறியாமல் அவள் கீழே விழுந்து கிடந்தாள். கைகள், கால்கள், முகம், உதடு, முழங்கால்கள் மற்றும் முதுகுபகுதிகள் அனைத்தும் சிதைக்கப்பட்டது. <br>
+ உடலின் சேலைகள் யாவும் எங்கு சென்றது என்பது அறியாமல் அவள் கீழே விழுந்து கிடந்தாள். கைகள், கால்கள், முகம், உதடு, முழங்கால்கள் மற்றும் முதுகுபகுதிகள் அனைத்தும் சிதைக்கப்பட்டது. <br><br>
  
-விரைவில் அடுத்த பாகம் !!! <style>.txt{user-select: none;} </p>
+&nbsp;&nbsp;&nbsp;&nbsp;விரைவில் அடுத்த பாகம் !!! <style>.txt{user-select: none;} </p>
    
 </body>
 </html>
